--- a/source/_posts/2025-10-21-js手写系列——节流函数.md
+++ b/source/_posts/2025-10-21-js手写系列——节流函数.md
@@ -65,25 +65,45 @@ function throttleTimer(func, delay) {
 - 功能最完整，适用性最广
 ```javascript
 function throttle(func, delay, options = {}) {
+    // 函数签名和变量声明
+    // func: 需要被节流的原始函数
+    // delay: 节流时间间隔（毫秒）
+    // options: 配置对象，包含 leading 和 trailing 选项
+    // timeoutId: 存储定时器ID，用于取消定时器
+    // lastTime: 记录上一次函数执行的时间戳
+    // leading: 是否在节流开始时立即执行（默认true）
+    // trailing: 是否在节流结束后执行（默认true）
     let timeoutId, lastTime = 0;
     const { leading = true, trailing = true } = options;
     
+    // 返回的节流函数
     return function(...args) {
+        // 保存原始函数的this上下文和参数
         const currentTime = Date.now();
         
-        // 如果是第一次调用且leading为false，设置lastTime为当前时间
+        // 处理leading=false的情况, 如果是第一次调用且leading为false，设置lastTime为当前时间, 这样第一次调用不会立即执行
         if (!lastTime && !leading) lastTime = currentTime;
         
+        // 计算距离下一次可以执行函数还剩余多少时间, currentTime - lastTime是距离上次执行经过的时间
         const remainingTime = delay - (currentTime - lastTime);
         
+        // 判断是否需要立即执行
+        // remainingTime <= 0: 已经超过了节流间隔，可以立即执
+        // remainingTime > delay: 处理特殊情况（如系统时间被修改）
         if (remainingTime <= 0 || remainingTime > delay) {
             if (timeoutId) {
+                // 清除可能存在的定时器
                 clearTimeout(timeoutId);
                 timeoutId = null;
             }
+            // 立即执行原始函数
             func.apply(this, args);
+            // 更新最后执行时间
             lastTime = currentTime;
         } else if (!timeoutId && trailing) {
+            //  设置延迟执行
+            // !timeoutId: 确保不会重复设置定时器
+            // trailing: 配置允许在节流结束后执行
             timeoutId = setTimeout(() => {
                 func.apply(this, args);
                 lastTime = Date.now();
@@ -98,3 +118,6 @@ function throttle(func, delay, options = {}) {
 - 对于需要立即响应的场景（如按钮点击），使用基础时间戳版
 - 对于需要保证最后一次执行的场景，使用定时器版
 - 大多数情况下，推荐使用完整版，因为它提供了最灵活的控制选项
+
+## 涉及知识点
+- [闭包](https://lirifa.github.io/js%E6%89%8B%E5%86%99%E7%B3%BB%E5%88%97%E2%80%94%E2%80%94%E8%8A%82%E6%B5%81%E5%87%BD%E6%95%B0.html)
