--- a/source/_posts/2025-10-21-js手写系列——节流函数、防抖函数.md
+++ b/source/_posts/2025-10-21-js手写系列——节流函数、防抖函数.md
@@ -1,14 +1,16 @@
 ---
-title: js手写系列——节流函数
+title: js手写系列——节流函数、防抖函数
 date: 2025-10-21 17:36:43
 tags: [js]
 categories: js手写系列
 ---
 
-节流是一种常用的性能优化技术，用于限制函数在特定时间间隔内只能执行一次。当频繁触发某个事件时，节流可以确保函数不会过于频繁地执行，从而提升性能。
+节流（throttle）是一种常用的性能优化技术，用于限制函数在特定时间间隔内只能执行一次。当频繁触发某个事件时，节流可以确保函数不会过于频繁地执行，从而提升性能。
+防抖（Debounce）是一种常用的性能优化技术，用于限制函数在短时间内被频繁调用。当事件被触发后，会等待一定时间间隔，如果在这段时间内事件没有被再次触发，才会执行函数。如果在这段时间内事件又被触发，则重新开始计时。
 
 <!--more-->
 
+# 节流函数
 ## 节流的基本概念
 
 节流的核心思想是：**在一定时间间隔内，无论事件触发多少次，函数只会执行一次。**
@@ -119,5 +121,104 @@ function throttle(func, delay, options = {}) {
 - 对于需要保证最后一次执行的场景，使用定时器版
 - 大多数情况下，推荐使用完整版，因为它提供了最灵活的控制选项
 
-## 涉及知识点
+# 防抖函数
+## 防抖的核心概念
+防抖的核心思想是：在事件被触发后，等待一定时间间隔，如果在这段时间内事件没有被再次触发，才会执行函数。如果在这段时间内事件再次被触发，则重新计时。
+
+## 防抖的工作原理
+1. 事件触发时，设置一个定时器
+2. 如果在定时器结束前事件再次触发，则清除之前的定时器并重新设置
+3. 只有当事件停止触发一段时间后，函数才会执行
+
+## 防抖的应用场景
+- 搜索框输入建议
+- 窗口大小调整(resize)事件
+- 表单验证
+- 按钮点击防重复提交
+- 自动保存功能
+
+## 实现
+1. 基础防抖函数
+```javascript
+function debounceBasic(func, delay) {
+    let timeoutId;
+    
+    return function(...args) {
+        // 清除之前的定时器
+        clearTimeout(timeoutId);
+        
+        // 设置新的定时器
+        timeoutId = setTimeout(() => {
+            func.apply(this, args);
+        }, delay);
+    };
+}
+```
+2. 立即执行版防抖函数
+```javascript
+function debounceImmediate(func, delay, immediate = false) {
+    let timeoutId;
+    
+    return function(...args) {
+        const context = this;
+        const callNow = immediate && !timeoutId;
+        
+        clearTimeout(timeoutId);
+        
+        timeoutId = setTimeout(() => {
+            timeoutId = null;
+            if (!immediate) {
+                func.apply(context, args);
+            }
+        }, delay);
+        
+        if (callNow) {
+            func.apply(context, args);
+        }
+    };
+}
+```
+3. 增强版防抖函数
+```javascript
+function debounceEnhanced(func, delay, options = {}) {
+    let timeoutId;
+    let lastExecTime = 0;
+    let leading = options.leading || false;
+    let trailing = options.trailing !== false; // 默认true
+    
+    return function(...args) {
+        const context = this;
+        const currentTime = Date.now();
+        
+        // 立即执行逻辑
+        if (leading && !timeoutId) {
+            func.apply(context, args);
+            lastExecTime = currentTime;
+        }
+        
+        clearTimeout(timeoutId);
+        
+        // 延迟执行逻辑
+        if (trailing) {
+            timeoutId = setTimeout(() => {
+                func.apply(context, args);
+                lastExecTime = Date.now();
+                timeoutId = null;
+            }, delay);
+        }
+    };
+}
+
+```
+
+
+## 防抖与节流的区别
+| 特性     |防抖(Debounce)     | 	节流(Throttle)  |
+|---------|-----------------|-------------------|
+| 执行时机  | 在事件停止触发后执行      | 在固定时间间隔内执行  |
+| 执行次数 | 只执行最后一次         | 至少执行一次  |
+| 适用场景 | 搜索框输入、窗口调整      | 页面滚动、鼠标移动  |
+
+
+# 涉及知识点
 - [闭包](https://lirifa.github.io/js%E6%89%8B%E5%86%99%E7%B3%BB%E5%88%97%E2%80%94%E2%80%94%E8%8A%82%E6%B5%81%E5%87%BD%E6%95%B0.html)
